fix collapse icon fix nav underligne active page

--- a/kasa/src/styles/header.sass
+++ b/kasa/src/styles/header.sass
@@ -20,3 +20,7 @@ header
             font-size: 24px
         li
             list-style: none
+
+.active 
+  text-decoration: underline
+  text-underline-offset: 4px
